platform_versioned_docs/version-23.1.0/enterprise/prerequisites/on-prem.mdx
---
title: "On-premises prerequisites"
description: Prerequisites for on-premises deployments
date: "12 Apr 2023"
tags: [on-prem, prerequisites, configuration]
---

This page describes the prerequisites for deploying Tower to your on-premises infrastructure.

## Tower container images

Nextflow Tower is distributed as a collection of Docker containers available through the Seqera Labs
container registry [`cr.seqera.io`](https://cr.seqera.io). Contact [support](https://support.seqera.io) to get your container access credentials. Once you have received your credentials, log in to the registry using these steps:

1.  Retrieve the **username** and **password** you received from Seqera Labs support.

1.  Run the following Docker command to authenticate to the registry (using the `username` and `password` values copied in step 1):

   ```bash
   docker login -u '/\<USERNAME\>/' -p '/\PASSWORD\>/' cr.seqera.io
   ```

1.  Pull the Nextflow Tower container images with the following commands:

   ```bash
   docker pull {{ images.tower_be_image }}

   docker pull {{ images.tower_fe_image }}
   ```

:::caution
The Seqera Labs container registry `cr.seqera.io` is the default Tower container image registry from version 22.4. Use of the AWS, Azure, and Google Cloud Tower image registries in existing installations is still supported but will be deprecated for **new installations** starting June 2023.
:::

See [Docker Compose](../docker-compose.mdx) for instructions to deploy Tower via Docker Compose.

See [Kubernetes](../kubernetes.mdx) for instructions to deploy Tower via Kubernetes.

## Mandatory prerequisites

### SMTP server

An SMTP server is required to send emails from Tower.

If you don't have your own mail server, you can use an external service from a cloud provider. Visit the corresponding **Prerequisites** page for more information and consult your IT team to select the most suitable solution for your organization.

### MySQL database

An external database (i.e. external to your Docker Compose or Kubernetes deployment) is _highly_ recommended for production deployments. If you don't have your own database service, you can use an external service from a cloud providers. Visit the corresponding **Prerequisites** page for more information and consult your IT team to select the most suitable solution for your organization.

If you decide to use an external database, you must create a MySQL user and database manually. See [Configuration](../configuration/database_and_redis.mdx) for more details.

## Optional prerequisites

### SSL certificate

An SSL certificate is required for your Tower instance to handle HTTPS traffic.

:::caution
From Tower 22.1.1, HTTP-only implementations **must** set the `TOWER_ENABLE_UNSAFE_MODE=true` environment variable in the Tower hosting infrastructure to enable user login.
:::
